# learn_pear_admin_flask

./: .cz.toml  .flaskenv  .gitignore  .pre-commit-config.yaml  configs.py  package-lock.json  pyproject.toml
pear_admin/: __init__.py
pear_admin/apis/: __init__.py  department.py  passport.py  rigths.py  role.py  user.py
pear_admin/extensions/: init_jwt.py  init_script.py
pear_admin/orms/: __init__.py  _base.py  department.py  rights.py  role.py  user.py
pear_admin/views/: index.py
static/admin/css/: admin.css  admin.dark.css  reset.css  variables.css
static/admin/css/other/: login.css  profile.css
static/component/layui/: layui.js
static/component/layui/css/: layui.css
static/component/pear/: pear.js
static/component/pear/css/module/: menuSearch.css
static/component/pear/module/: admin.js  fullscreen.js  menu.js  page.js  tabPage.js  tools.js
static/component/pear/module/extends/: yaml.js
static/config/: pear.config.json  pear.config.yml
static/data/: ums_department.csv  ums_rights.csv  ums_role.csv  ums_user.csv
templates/: index.html  login.html
templates/system/: department.html  rights.html  role.html  user.html
templates/view/analysis/: index.html
templates/view/console/: index.html
