[tool.poetry]
name = "pear-admin-flask"
version = "0.1.0"
description = ""
authors = ["zhengxinonly <pyxxponly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-migrate = "^4.0.7"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"
commitizen = "^3.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
